--- a/quelques/capture.html
+++ b/quelques/capture.html
@@ -189,7 +189,7 @@
         const month = (lastMonth < 10) ? "0" + lastMonth : "" + lastMonth
 
         loading(true)
-        return fetch(`/data/captures/${lastYear}/${month}.txt`)
+        return fetch(`./data/captures/${lastYear}/${month}.txt`)
         .then((response) => {
           return response.text().then((raw) => {
             console.log(raw)
